# src/Zalihe.Infrastructure/DependencyInjection.cs
@@ -2,6 +2,7 @@ using Microsoft.EntityFrameworkCore;
 using Microsoft.Extensions.Configuration;
 using Microsoft.Extensions.DependencyInjection;
 using Zalihe.Application.Common;
+using Zalihe.Application.Dashboard;
 using Zalihe.Application.Imports;
 using Zalihe.Application.Items;
 using Zalihe.Application.Stock;
@@ -27,6 +28,7 @@ public static class DependencyInjection
         services.AddScoped<ItemService>();
         services.AddScoped<ItemHistoryService>();
         services.AddScoped<StockService>();
+        services.AddScoped<DashboardService>();
         services.AddScoped<ItemImportService>();
         services.AddScoped<IUserDirectory, UserDirectory>();
 
